@@ -127,7 +127,7 @@ angular.module('tables', ['stats', 'sql', 'common', 'tableinfo'])
           'GROUP BY partition_ident, routing_state, state, relocating_node, "primary"';
 
         var r1 = requestId();
-        var q1 = SQLQuery.execute(shardStmt, [tableSchema, tableName]).success(function(shardQuery) {
+        var q1 = SQLQuery.execute(shardStmt, [tableSchema, tableName], false, false, false).success(function(shardQuery) {
           if (typeof activeRequests[r1] == 'undefined') {
             return;
           }
@@ -136,7 +136,7 @@ angular.module('tables', ['stats', 'sql', 'common', 'tableinfo'])
             'WHERE schema_name = ? AND table_name = ?';
 
           var r2 = requestId();
-          var q2 = SQLQuery.execute(tablePartitionStmt, [tableSchema, tableName]).success(function(tablePartitionQuery) {
+          var q2 = SQLQuery.execute(tablePartitionStmt, [tableSchema, tableName], false, false, false).success(function(tablePartitionQuery) {
             if (typeof activeRequests[r2] == 'undefined') {
               return;
             }
@@ -192,7 +192,7 @@ angular.module('tables', ['stats', 'sql', 'common', 'tableinfo'])
         // Table Schema
         var tableStmt = 'SELECT column_name, data_type FROM information_schema.columns ' +
           'WHERE table_schema = ? AND table_name = ?';
-        SQLQuery.execute(tableStmt, [tableSchema, tableName])
+        SQLQuery.execute(tableStmt, [tableSchema, tableName], false, false, false)
           .success(function(query) {
             $scope.schemaHeaders = query.cols;
             $scope.schemaRows = query.rows;
