@@ -1,0 +1,13 @@
+<div class="unauthorized">
+<div class="unauthorized-wrapper">
+	<div class="unauthorized-header">
+		<img class="unauthorized-header__icon" src="static/assets/logo-CrateDB@2x.png">
+	</div>
+
+	<div class="unauthorized-body">
+	 <img class="unauthorized-body__img" src="static/assets/gfx-not-allowed@2x.png">
+	 <h3>You are not allowed to access this cluster</h3>
+	 <h4>Please contact your system administrator to get more information</h4>
+	</div>
+</div>
+</div>
