@@ -14,6 +14,8 @@ Changes
 Fixes
 -----
 
+ - Redirect to /401 when the admin-ui user does not have cluster privileges.
+
  - Expanded the list of keywords used by autocapitalization.
 
  - Fix toggle buttons UI, which was broken while zooming.
